# android_frameworks_native

./: .gitignore  Android.bp  CleanSpec.mk  PREUPLOAD.cfg  TEST_MAPPING
cmds/atrace/: Android.bp  Android.mk  atrace.cpp  atrace.rc  atrace_userdebug.rc
cmds/bugreport/: Android.bp  bugreport.cpp
cmds/bugreportz/: OWNERS  main.cpp
cmds/cmd/: Android.bp  cmd.cpp
cmds/deadbindertest/: Android.mk  main.cpp
cmds/dumpstate/: Android.bp  Android.mk  DumpPool.cpp  DumpPool.h  DumpstateInternal.cpp  DumpstateInternal.h  DumpstateService.cpp  DumpstateService.h  DumpstateUtil.cpp  DumpstateUtil.h  OWNERS  README.md  TEST_MAPPING  bugreport-format.md  dumpstate.cpp  dumpstate.h  dumpstate.rc  libdumpstate_default.cpp  main.cpp  utils.cpp
cmds/dumpsys/: Android.bp  OWNERS  dumpsys.cpp  dumpsys.h  main.cpp
cmds/evemu-record/: Android.bp  README.md  evdev.rs  main.rs  timeval_util.rs
cmds/flatland/: Android.bp  GLHelper.cpp  GLHelper.h  Main.cpp
cmds/idlcli/: Android.bp  utils.h  vibrator.h
cmds/installd/: Android.bp  Android.mk  CacheItem.cpp  CacheItem.h  CacheTracker.cpp  CacheTracker.h  CrateManager.cpp  CrateManager.h  InstalldNativeService.cpp  InstalldNativeService.h  OWNERS  QuotaUtils.cpp  SysTrace.h  TEST_MAPPING  commands.c  commands.cpp  commands.h  dexopt.cpp  dexopt.h  file_parsing.h  globals.cpp  globals.h  installd.c  installd.cpp  (+18 more)
docs/: Doxyfile
headers/: Android.bp
include/: OWNERS  binder
libs/vr/libbufferhub/mocks/gralloc/: BUILD.gn  gralloc.cpp  gralloc_mock.h
opengl/: Android.bp  OWNERS  TEST_MAPPING
vulkan/: Android.bp  README.md
(+3616 files in other folders)
