config("gralloc_config") {
  include_dirs = [ "." ]
}

static_library("gralloc") {
  testonly = true

  sources = [
    "gralloc.cpp",
    "gralloc.h",
  ]

  include_dirs = [
    "//system/core/include",
    "//hardware/libhardware/include",
  ]

  public_deps = [
    "//dreamos/external/gmock",
  ]

  public_configs = [ ":gralloc_config" ]
}
